tests/type_tests/negatives/compose_non_composable_arguments.py
from pfun import compose


def f(a: int) -> int:
    pass


def g(a: int) -> str:
    pass


compose(f, g)
